<!--
  ~ ©2017 Rajneesh Singh
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.activities.MainActivity">

    <item android:id="@+id/clear_queue"
        android:title="@string/clear_queue"/>

    <item
        android:id="@+id/action_eq"
        android:title="@string/equalizers"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_changeArt"
        android:title="@string/change_artwork"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_lyrics"
        android:title="@string/search_lyrics"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never"/>

    <item android:id="@+id/action_savequeue"
        android:title="@string/save_queue"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_edit_tags"
        android:title="@string/action_edit_tags"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_ringtone"
        android:title="@string/action_set_ringtone"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_trackdetails"
        android:title="@string/action_details"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/more"
        android:title="@string/more"
        app:showAsAction="never">

        <menu>

            <item
                android:id="@+id/go_to_album"
                android:title="@string/go_to_albums"
                app:showAsAction="never" />

            <item
                android:id="@+id/go_to_artist"
                android:title="@string/go_to_artists"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>