<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ ©2017 Rajneesh Singh
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:title="Refresh" />

    <item
        android:id="@+id/menu_sort_by"
        android:title="@string/menu_sort_by"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/menu_sort_by_az"
                android:title="@string/sort_order_entry_az"/>

            <item
                android:id="@+id/menu_sort_by_za"
                android:title="@string/sort_order_entry_za"/>

            <item
                android:id="@+id/menu_sort_by_date"
                android:title="@string/sort_order_entry_date"/>

        </menu>

    </item>

    <item
        android:id="@+id/action_create_playlist"
        android:title="@string/create_playlist"
        app:showAsAction="never"/>


    <item android:id="@+id/shuffle_all"
        android:title="@string/shuffle_all"/>

</menu>